--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@style/Theme.AuthTutorial"
         tools:targetApi="31">
         <activity
-            android:name=".activites.CreateCarActivity"
+            android:name=".activites.CarDetailActivity"
             android:exported="false"
             android:parentActivityName=".activites.HomeActivity"/>
         <activity
+            android:name=".activites.CreateCarActivity"
+            android:exported="false"
+            android:parentActivityName=".activites.HomeActivity" />
+        <activity
             android:name=".activites.CreateMakeActivity"
             android:exported="false"
-            android:parentActivityName=".activites.HomeActivity"/>
+            android:parentActivityName=".activites.HomeActivity" />
         <activity
             android:name=".activites.LoginActivity"
             android:exported="false"
